--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "twilio": "^3.69.0",
+    "twilio-video": "^2.17.1"
+  },
+  "devDependencies": {
+    "@types/node": "20.5.3",
+    "@types/react": "18.2.21"
   }
 }
