--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
+    "next": "^12.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "twilio": "^3.69.0",
